# rsvp_reader

./: README.md  model.md  pubspec.yaml  rsvp_reader_minimal.txt
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: library_page.dart  reader_page.dart
lib/providers/: reader_provider.dart  settings_store.dart
lib/screens/: reader_screen.dart
lib/src/: theme_system.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: library.dart  (+6 more)
lib/widgets/: background_layer.dart  rsvp_display.dart  settings_panel.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: library.rs  mod.rs  processor.rs  reader.rs
rust/src/core/: book_parser.rs  epub_converter.rs  indexed_store.rs  mod.rs  pacing.rs  reading_loop.rs  rsvp_writer.rs  text.rs  tokenizer.rs
rust/src/logic/: rsvp.rs
rust/src/parsers/: epub.rs  pdf.rs
rust/src/storage/: book_cache.rs  library_scanner.rs  mod.rs  progress_store.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_rsvp_reader.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_rsvp_reader.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+6 files in other folders)
