[package]
name = "rust_lib_rsvp_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
epub = "2.0"                    # Pure Rust EPUB parser
pdf-extract = "0.10.0"          # Pure Rust PDF text extraction
html2text = "0.16.7"
unicode-segmentation = "1.12.0"
zip = "7.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
